2004-09-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc.el (mhc-edit): Remove schedule headers just before
	inserting new schedule headers.

	* emacs/mhc-db.el (mhc-db-add-exception-rule): Call
	`mhc-draft-reedit-file' instead of `mhc-draft-reedit-buffer', in
	order to avoid double-decoding problem in Gnus and SEMI-MUAs.

	* emacs/mhc-minibuf.el (mhc-input-location): Use default value.

2004-09-08  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-summary-mode-setup): Support Mew
	4.0.69 or later.

2004-06-22  Yoshinari Nomura  <nom@quickhack.net>

	* ruby-ext/lib/mhc-palm.rb:
	(PilotApptRecord#set_monthly_by_day): fix typo.

	* ruby-ext/lib/mhc-date.rb: (MhcDate::O_LABEL): capitalized.

	* ruby-ext/lib/mhc-schedule.rb:
	(MhcScheduleItem#dump_without_xsc_header):
	if no description, don't convert non X-SC headers.

	(MhcScheduleItem#mk_palm_skel):
	if contents is empty, don't set note.

	(TNX, Mr. KOIE Hidetaka <hide@koie.org>)

2004-06-15  Yoshinari Nomura  <nom@quickhack.net>

	* ruby-ext/lib/mhc-palm.rb
	(PilotApptRecord#to_xsc): Put only start in X-SC-Time: in case
		                  satrt is same as end.
	(TNX, Mr. KOIE Hidetaka <hide@koie.org>)

	* ruby-ext/lib/mhc-schedule.rb
	(MhcScheduleItem#to_palm): correct handling of 'Last' keyword.
	(TNX, Mr. KOIE Hidetaka <hide@koie.org>)

2004-05-27  Yoshiaki Kasahara  <kasahara@nc.kyushu-u.ac.jp>

	* gemcal.in (MhcScheduleEdit::initialize): Fix arguments for
	border_width.

2004-05-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc-gnus.el (mhc-gnus-summary-mode-setup): Reset caches
	kept by backlog mechanism and `gnus-original-article-buffer', in
	order to fix the problem that correct articles are not selected
	after deleting a schedule.

2004-05-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc.el (toplevel): Add autoload of `easy-menu-add' to
	suppress a byte-compile warning.
	(mhc-edit): Highlight an import buffer before confirmation.  Do